--- a/app/style/ui/css/homepage.css
+++ b/app/style/ui/css/homepage.css
@@ -22,24 +22,22 @@ body{
 }
 
 /*AnimatedBar*/
-.top-bar {
-    width: 100%;
-    height: 50px;
-    background-color: #333;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .moving-text {
-    position: absolute;
-    white-space: nowrap;
-    color: white;
-    font-size: 16px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
+
 .link{
     width: 100px;
     height: 100px;
     background-color: aquamarine;
+}
+
+/* scrolling bar */
+.top-bar {
+    width: 100%;
+    height: 45px;
+    background-color: rgba(225, 220, 220, 1);
+    position: relative;
+    overflow: hidden;
+  }
+.movingBar{
+     display: inline-flex;
+     gap: 20px;
 }
