--- a/app/style/ui/css/homepage.css
+++ b/app/style/ui/css/homepage.css
@@ -1,43 +1,240 @@
-body{
-    margin: 0px;
+body {
+  margin: 0px;
 }
-.background{
-    background-color: red;
+.background {
+  background-color: red;
 }
-.body{
-    width: 100%;
-    height: 200vh;
-    background-color: bisque;
+.logo {
+  color: rgba(136, 107, 107, 1);
+  font-size: 35px;
+  z-index: 5;
 }
-.square{
-    width: 250px;
-    height: 250px;
-    background-color: blue;
-}
-.navbar{
-    background-color: blueviolet;
-    width: 100%;
-    height: 100px;
-    border: 3px solid;
+.logo-bck {
+  width: 100px;
+  height: 80px;
+  background-color: rgba(207, 34, 34, 1);
+  position: absolute;
+  z-index: 1;
+  top: 10px;
+  transform: rotate(50deg);
 }
 
-/*AnimatedBar*/
-
-.link{
-    width: 100px;
-    height: 100px;
-    background-color: aquamarine;
+.body {
+  width: 100%;
+  height: 200vh;
+  background-color: bisque;
+}
+.square {
+  width: 250px;
+  height: 250px;
+  background-color: blue;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* scrolling bar */
+/* Slider */
 .top-bar {
-    width: 100%;
-    height: 45px;
-    background-color: rgba(225, 220, 220, 1);
-    position: relative;
-    overflow: hidden;
+  width: 100%;
+  height: 45px;
+  background-color: rgba(225, 220, 220, 1);
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.movingBar {
+  display: inline-flex;
+  gap: 20px;
+  height: 45px;
+}
+
+/* Nav-Bar */
+.navbar {
+  width: 100%;
+  height: 85px;
+  border: 0px;
+  display: inline-flex;
+  justify-content: space-between;
+}
+.navbar-start {
+  width: 75px;
+  height: 100%;
+  background-color: brown;
+}
+.navbar-hamburg {
+  width: 75px;
+  height: 75px;
+  z-index: 100;
+}
+.navbar-start-child {
+  display: none;
+}
+.navbar-mid {
+  width: 140px;
+  height: 85px;
+  overflow: hidden;
+  position: relative;
+  z-index: 98;
+}
+.navbar-end {
+  width: 100px;
+  height: 100%;
+  background-color: yellow;
+  z-index: 98;
+}
+
+/*Hamburg animated button*/
+.bar-on {
+  width: 100%;
+  height: 500px;
+  background-color: green;
+  position: absolute;
+  z-index: 99;
+  animation: barOn 0.25s ease-in-out;
+  animation-duration: 0.5s;
+}
+
+@keyframes barOn {
+  from {
+    height: 0px;
   }
-.movingBar{
-     display: inline-flex;
-     gap: 20px;
+  to {
+    height: 500px;
+  }
+}
+
+.bar-off {
+  width: 100%;
+  height: 0px;
+  background-color: green;
+  position: absolute;
+  z-index: 99;
+  animation: barOff 0.25s ease-out;
+  animation-duration: 0.5s;
+  visibility: hidden;
+}
+@keyframes barOff {
+  from {
+    height: 500px;
+  }
+  to {
+    height: 0px;
+  }
+}
+.cursor {
+  cursor: pointer;
+}
+
+
+
+.bar-menu-on {
+  width: 100%;
+  height: 500px;
+  background-color: purple;
+  position: absolute;
+  z-index: 50;
+  animation: barMenuOn 0.25s ease-in-out;
+  animation-duration: 0.5s;
+  z-index: 50;
+}
+@keyframes barMenuOn{
+  from {
+    height: 0px;
+  }
+  to {
+    height: 500px;
+  }
+}
+
+.bar-menu-off {
+  width: 100%;
+  height: 0px;
+  background-color: purple;
+  position: absolute;
+  z-index: 50;
+  animation: barMenuOff 0.25s ease-out;
+  animation-duration: 0.5s;
+  visibility: hidden;
+  z-index: 50;
+}
+@keyframes barMenuOff {
+  from {
+    height: 500px;
+  }
+  to {
+    height: 0px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 1024px) {
+  .logo {
+    font-size: 50px;
+  }
+  .logo-bck {
+    width: 105px;
+    height: 85px;
+    top: 7px;
+  }
+  .navbar-start {
+    width: 400px;
+    height: 100%;
+    background-color: brown;
+    justify-content: space-between;
+  }
+  .navbar-start-child {
+    width: 350px;
+    height: 50px;
+    display: inline-flex;
+    background-color: rgb(47, 194, 204);
+    justify-content: start;
+    gap: 30px;
+    padding-left: 20px;
+    z-index: 98;
+  }
+  .navbar-mid {
+    width: 199px;
+  }
+  .navbar-end {
+    width: 400px;
+  }
+  .navbar-button {
+    height: 25px;
+    text-decoration: none;
+    margin-top: 10px;
+    color: black;
+    font-weight: 800;
+  }
+  .navbar-button .nav-underline {
+    width: 0%;
+    height: 3px;
+    transition: width 0.2s ease-in;
+    border-bottom: 2px solid rgba(136, 107, 107, 1);
+  }
+
+  .navbar-button:hover .nav-underline {
+    width: 100%;
+  }
 }
