--- a/app/style/ui/css/homepage.css
+++ b/app/style/ui/css/homepage.css
@@ -9,6 +9,15 @@ body {
   font-size: 35px;
   z-index: 5;
 }
+.slider-navbar {
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 20;
+}
+.homepage {
+  margin-top: 200px;
+}
 .logo-bck {
   width: 100px;
   height: 80px;
@@ -18,7 +27,6 @@ body {
   top: 10px;
   transform: rotate(50deg);
 }
-
 .body {
   width: 100%;
   height: 200vh;
@@ -28,6 +36,7 @@ body {
   width: 250px;
   height: 250px;
   background-color: blue;
+  z-index: 0;
 }
 .center {
   display: flex;
@@ -43,6 +52,7 @@ body {
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  z-index: 100;
 }
 .movingBar {
   display: inline-flex;
@@ -58,7 +68,12 @@ body {
   display: inline-flex;
   justify-content: space-between;
 }
-.navbar-start {
+.navbar-start-open {
+  width: 75px;
+  height: 100%;
+  background-color: brown;
+}
+.navbar-start-close {
   width: 75px;
   height: 100%;
   background-color: brown;
@@ -78,11 +93,13 @@ body {
   position: relative;
   z-index: 98;
 }
+
 .navbar-end {
-  width: 100px;
+  width: 150px;
   height: 100%;
   background-color: yellow;
   z-index: 98;
+  gap:5px
 }
 
 /*Hamburg animated button*/
@@ -127,32 +144,43 @@ body {
   cursor: pointer;
 }
 
-
-
 .bar-menu-on {
-  width: 100%;
+  visibility: visible;
+  width: auto;
   height: 500px;
   background-color: purple;
+  border-radius: 30px;
   position: absolute;
+  opacity: 1;
+  top: 60px;
+  left: 20px;
+  right: 20px;
   z-index: 50;
   animation: barMenuOn 0.25s ease-in-out;
   animation-duration: 0.5s;
   z-index: 50;
 }
-@keyframes barMenuOn{
+@keyframes barMenuOn {
   from {
-    height: 0px;
+    opacity: 0;
+    top: -200px;
   }
   to {
-    height: 500px;
+    top: 60px;
+    opacity: 1;
   }
 }
 
 .bar-menu-off {
-  width: 100%;
-  height: 0px;
+  width: auto;
+  height: 500px;
   background-color: purple;
   position: absolute;
+  border-radius: 30px;
+  top: -200px;
+  opacity: 0;
+  left: 20px;
+  right: 20px;
   z-index: 50;
   animation: barMenuOff 0.25s ease-out;
   animation-duration: 0.5s;
@@ -161,33 +189,14 @@ body {
 }
 @keyframes barMenuOff {
   from {
-    height: 500px;
+    top: 60px;
+    opacity: 1;
   }
   to {
-    height: 0px;
+    top: -200px;
+    opacity: 0;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media only screen and (min-width: 1024px) {
   .logo {
@@ -198,7 +207,16 @@ body {
     height: 85px;
     top: 7px;
   }
-  .navbar-start {
+  .bar2 {
+    display: none;
+  }
+  .navbar-start-open {
+    width: 400px;
+    height: 100%;
+    background-color: brown;
+    justify-content: space-between;
+  }
+  .navbar-start-close {
     width: 400px;
     height: 100%;
     background-color: brown;
@@ -218,7 +236,7 @@ body {
     width: 199px;
   }
   .navbar-end {
-    width: 400px;
+    width: 350px;
   }
   .navbar-button {
     height: 25px;
@@ -236,5 +254,118 @@ body {
 
   .navbar-button:hover .nav-underline {
     width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .bar2 {
+    display: block;
+  }
+  .navbar-start {
+    width: 400px;
+    height: 100%;
+    background-color: brown;
+    justify-content: space-between;
+  }
+  .navbar-start-open {
+    position: relative;
+    left: 50px;
+    top: 20px;
+    animation: navbar-move 0.25s ease-in-out;
+    animation-duration: 0.5s;
+  }
+  @keyframes navbar-move {
+    from {
+      left: 0px;
+      top: 0px;
+    }
+    to {
+      left: 50px;
+      top: 20px;
+    }
+  }
+
+  .navbar-start-close {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    animation: navbar-putback 0.25s ease-in-out;
+    animation-duration: 0.5s;
+  }
+  @keyframes navbar-putback {
+    from {
+      left: 50px;
+      top: 20px;
+    }
+    to {
+      left: 0px;
+      top: 0px;
+    }
+  }
+
+  .navbar-mid-open {
+    width: 199px;
+    top: 15px;
+    animation: logo-anim-on 0.25s ease-in-out;
+    animation-duration: 0.5s;
+  }
+  @keyframes logo-anim-on {
+    from {
+      top: 0px;
+    }
+    to {
+      top: 15px;
+    }
+  }
+
+  .navbar-mid-close {
+    width: 199px;
+    top: 0px;
+    animation: logo-anim-off 0.25s ease-in-out;
+    animation-duration: 0.5s;
+  }
+  @keyframes logo-anim-off {
+    from {
+      top: 15px;
+    }
+    to {
+      top: 0px;
+    }
+  }
+
+  .navbar-end-close {
+    position: relative;
+    right: 0px;
+    top: 0px;
+    animation: navEnd-close 0.25s ease-in-out;
+    animation-duration: 0.5s;
+  }
+  @keyframes navEnd-close {
+    from {
+      right: 50px;
+      top: 20px;
+    }
+    to {
+      right: 0px;
+      top: 0px;
+    }
+  }
+
+  .navbar-end-open {
+    position: relative;
+    right: 50px;
+    top: 20px;
+    animation: navEnd-open 0.25s ease-in-out;
+    animation-duration: 0.5s;
+  }
+  @keyframes navEnd-open {
+    from {
+      right: 0px;
+      top: 0px;
+    }
+    to {
+      right: 50px;
+      top: 20px;
+    }
   }
 }
