--- a/app/style/ui/css/homepage.css
+++ b/app/style/ui/css/homepage.css
@@ -79,8 +79,6 @@ body {
   background-color: brown;
 }
 .navbar-hamburg {
-  width: 75px;
-  height: 75px;
   z-index: 100;
 }
 .navbar-start-child {
@@ -95,11 +93,11 @@ body {
 }
 
 .navbar-end {
-  width: 150px;
+  width: 100px;
   height: 100%;
   background-color: yellow;
   z-index: 98;
-  gap:5px
+  gap: 5px;
 }
 
 /*Hamburg animated button*/
@@ -163,7 +161,7 @@ body {
 @keyframes barMenuOn {
   from {
     opacity: 0;
-    top: -200px;
+    top: -700px;
   }
   to {
     top: 60px;
@@ -173,11 +171,11 @@ body {
 
 .bar-menu-off {
   width: auto;
-  height: 500px;
+  height: 700px;
   background-color: purple;
   position: absolute;
   border-radius: 30px;
-  top: -200px;
+  top: -700px;
   opacity: 0;
   left: 20px;
   right: 20px;
@@ -193,7 +191,7 @@ body {
     opacity: 1;
   }
   to {
-    top: -200px;
+    top: -700px;
     opacity: 0;
   }
 }
@@ -231,6 +229,10 @@ body {
     gap: 30px;
     padding-left: 20px;
     z-index: 98;
+  }
+  .navbar-hamburg {
+    width: 75px;
+    height: 75px;
   }
   .navbar-mid {
     width: 199px;
@@ -367,5 +369,163 @@ body {
       right: 50px;
       top: 20px;
     }
+  }
+
+  .bar-menu-div {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .bar-menu-a {
+    width: 400px;
+    height: 350px;
+    background-color: aquamarine;
+    padding-top: 150px;
+    padding-left: 50px;
+    border-radius: 30px;
+  }
+  .bar-menu-b {
+    width: 100%;
+    height: 400px;
+    padding-top: 100px;
+    background-color: beige;
+    border-radius: 30px;
+    gap: 10px;
+  }
+  .bar-menu-card {
+    width: 254px;
+    height: 308px;
+    background-color: red;
+    padding-left: 40px;
+    padding-top: 20px;
+    border-radius: 30px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 160%;
+    transition: background-size 1s ease-in;
+    animation: menu-card-anim 0.25s ease-in-out;
+    animation-duration: 0.5s;
+    margin-top: 50px;
+    animation-delay: 0.3s;
+    cursor: pointer;
+  }
+  @keyframes menu-card-anim {
+    from {
+      margin-top: 0px;
+    }
+    to {
+      margin-top: 50px;
+    }
+  }
+
+  .bar-menu-card:hover {
+    background-size: 170%;
+  }
+  .card-title {
+    font-size: 17px;
+  }
+  .card-text {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .bar-menu-b {
+    gap: 30px;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .bar-menu-a {
+    width: 420px;
+    height: 450px;
+  }
+  .bar-menu-b {
+    width: 100%;
+    height: 450px;
+    padding-top: 150px;
+  }
+  .bar-menu-card {
+    width: 290px;
+    height: 370px;
+  }
+  .bar-menu-on {
+    height: 600px;
+  }
+  .bar-menu-off {
+    height: 600px;
+  }
+}
+
+@media only screen and (min-width: 1700px) {
+  .bar-menu-b {
+    gap: 60px;
+  }
+  .card-title {
+    font-size: 24px;
+  }
+  .card-title {
+    font-size: 16px;
+  }
+}
+@media only screen and (min-width: 1850px) {
+  .bar-menu-on {
+    height: 750px;
+  }
+  .bar-menu-off {
+    height: 750px;
+  }
+  .bar-menu-a {
+    width: 400px;
+    height: 550px;
+    padding-left: 100px;
+    padding-top: 200px;
+  }
+  .bar-menu-b {
+    width: 100%;
+    height: 500px;
+    padding-top: 250px;
+    gap: 20px;
+    justify-content: end;
+    padding-right: 20px;
+  }
+  .bar-menu-card {
+    width: 357px;
+    height: 415px;
+  }
+  .bar-menu-div {
+    gap: 100px;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .bar-menu-b {
+    justify-content: center;
+  }
+}
+@media only screen and (min-width: 2100px) {
+  .bar-menu-on {
+    height: 900px;
+  }
+  .bar-menu-off {
+    height: 900px;
+  }
+  .bar-menu-a {
+    width: 400px;
+    height: 650px;
+    padding-left: 150px;
+  }
+  .bar-menu-b {
+    width: 100%;
+    height: 600px;
+    padding-top: 300px;
+    justify-content: end;
+    gap: 50px;
+  }
+  .bar-menu-card {
+    width: 410px;
+    height: 500px;
   }
 }
