--- a/app/style/ui/css/smallcomp.css
+++ b/app/style/ui/css/smallcomp.css
@@ -1,19 +1,18 @@
-.btn-div{
-    height: fit-content;
-    display: flex;
-    justify-content: end;
+.btn-div {
+  height: fit-content;
+  display: flex;
+  justify-content: end;
 }
-.btn-start{
-    display: flex;
-    justify-content: start;
+.btn-start {
+  display: flex;
+  justify-content: start;
 }
-.btn-end{
-    display: flex;
-    justify-content: end;
-   
+.btn-end {
+  display: flex;
+  justify-content: end;
 }
-#btn-visibility{
-    display: none;
+#btn-visibility {
+  display: none;
 }
 .main-button {
   height: 70px;
@@ -25,9 +24,14 @@
   padding-right: 20px;
   cursor: pointer;
   border: 0px;
-  background-color: rgba(189, 202, 190, 1);
 }
-
+.small-btn {
+    height: 60px;
+    width: 100px;
+    border-radius: 40px;
+    border: 0px;
+    cursor: pointer;
+  }
 .arrow {
   font-size: 25px;
   margin-top: 2px;
@@ -39,14 +43,19 @@
   opacity: 1;
 }
 
-.btn-text{
-    position: relative;
-    left: 21px;
-    transition: left 1s ease-in-out;
+.btn-text {
+  position: relative;
+  left: 21px;
+  transition: left 1s ease-in-out;
 }
 
+
 @media only screen and (min-width: 1024px) {
-    #btn-visibility{
-        display: contents;
-    }
+  #btn-visibility {
+    display: contents;
+  }
+  .small-btn{
+    display: none;
+  }
+  
 }
