--- a/app/style/ui/css/smallcomp.css
+++ b/app/style/ui/css/smallcomp.css
@@ -1,3 +1,4 @@
+/*Small Components CSS*/
 .btn-div {
   height: fit-content;
   display: flex;
@@ -48,7 +49,28 @@
   left: 21px;
   transition: left 1s ease-in-out;
 }
+.card-button{
+   width: fit-content;
+   height: 50px;
+   padding-left: 25px;
+   padding-right: 25px;
+   border-radius: 30px;
+   border: 0px;
+   cursor: pointer;
+}
 
+#btn-big-wh{
+  display: none;
+}
+
+@media only screen and (min-width: 400px) {
+  #btn-sm-wh{
+    display: none;
+}
+  #btn-big-wh{
+    display: block;
+  }
+}
 
 @media only screen and (min-width: 1024px) {
   #btn-visibility {
