--- a/app/style/ui/css/navbar.css
+++ b/app/style/ui/css/navbar.css
@@ -1,4 +1,3 @@
-
 .logo {
   color: rgba(136, 107, 107, 1);
   font-size: 35px;
@@ -10,7 +9,6 @@
   top: 0px;
   z-index: 20;
 }
-
 
 .center {
   display: flex;
@@ -74,32 +72,34 @@
 /*Hamburg animated button*/
 .bar-on {
   width: 100%;
-  height: 500px;
-  background-color: green;
+  height: 100vh;
+  background-color: white;
   position: absolute;
   z-index: 99;
   animation: barOn 0.25s ease-in-out;
   animation-duration: 0.5s;
+  overflow: hidden;
 }
 
 @keyframes barOn {
   from {
-    height: 0px;
+    height: 0vh;
   }
   to {
-    height: 500px;
+    height: 100vh;
   }
 }
 
 .bar-off {
   width: 100%;
   height: 0px;
-  background-color: green;
+  background-color: white;
   position: absolute;
   z-index: 99;
   animation: barOff 0.25s ease-out;
   animation-duration: 0.5s;
   visibility: hidden;
+  overflow: hidden;
 }
 @keyframes barOff {
   from {
@@ -166,6 +166,101 @@
     opacity: 0;
   }
 }
+.barOn {
+  justify-content: space-between;
+}
+.barOn-left {
+  height: 100vh;
+  width: 320px;
+}
+.bar-animated-txt {
+  margin-top: 100px;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: margin 0.25s ease-in;
+}
+.bar-animated-txt:hover {
+  opacity: 1;
+  margin-left: 5px;
+}
+.barOn-right {
+  height: 100vh;
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  display: none;
+  justify-content: center;
+  align-content: center;
+}
+.barOn-box-off{
+  width: 43.9%;
+  height: 43.9%;
+  background-color: whitesmoke;
+}
+.barOn-box-on {
+  width: 43.9%;
+  height: 43.9%;
+  background-color: whitesmoke;
+  animation: barOn-box 2s ease-in;
+  animation-duration: 0.5s;;
+}
+
+@keyframes barOn-box {
+  from {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.barOn-box-image {
+  display: flex;
+  justify-self: center;
+  transition: scale 0.25s ease-in;
+  margin-bottom: 15px;
+  aspect-ratio: 4/3;
+  object-fit: contain;
+}
+.barOn-box-image:hover {
+  scale: 1.05;
+}
+
+.barOn-box-text {
+  position: relative;
+}
+
+.barOn-title {
+  margin: 0px;
+  margin-bottom: 5px;
+}
+.barOn-txt {
+  margin: 0px;
+  margin-bottom: 5px;
+}
+
+.bar-txt-big {
+  margin: 0px;
+  font-size: 38px;
+}
+.bar-txt-sm {
+  margin: 0px;
+  font-size: 30px;
+}
+.txt-barOn-container {
+  margin-top: 120px;
+  margin-left: 7%;
+}
+.txt-barOn-container2 {
+  margin-top: 50px;
+  margin-left: 7%;
+}
+.hr {
+  opacity: 0.5;
+}
 
 @media only screen and (min-width: 1024px) {
   .logo {
@@ -220,8 +315,18 @@
   .navbar-button:hover .nav-underline {
     width: 100%;
   }
+  .barOn-box-image {
+    margin-top: 50px;
+    height: 60%;
+    width: 110%;
+  }
+  .barOn-right {
+    display: flex;
+  }
+  .barOn-left {
+    width: 30%;
+  }
 }
-
 @media only screen and (min-width: 1200px) {
   .bar2 {
     display: block;
@@ -397,6 +502,11 @@
   .bar-menu-b {
     gap: 30px;
   }
+  .barOn-box-image {
+    margin-top: 0px;
+    height: 70%;
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 1600px) {
@@ -418,6 +528,10 @@
   }
   .bar-menu-off {
     height: 600px;
+  }
+  .barOn-box-image {
+    height: 70%;
+    width: 85%;
   }
 }
 
@@ -459,6 +573,11 @@
   }
   .bar-menu-div {
     gap: 100px;
+  }
+  .barOn-box-image {
+    margin-top: 30px;
+    height: 70%;
+    width: 70%;
   }
 }
 
