--- a/app/style/ui/css/carousel.css
+++ b/app/style/ui/css/carousel.css
@@ -1,4 +1,3 @@
-
 .carousel-body {
   height: 66vh;
   width: 100%;
@@ -25,6 +24,7 @@
   border-bottom: 1px solid black;
   display: flex;
   position: absolute;
+    cursor: none;
 }
 .carousel-left {
   width: 50%;
@@ -52,13 +52,13 @@
   height: 100%;
   width: 100%;
   position: absolute;
-   background-color:rgba(250, 254, 255, 1);
+  background-color: rgba(250, 254, 255, 1);
 }
 .carousel-line {
   width: 100%;
   height: 30vh;
   position: absolute;
-  background-color:rgba(252, 252, 255, 1);
+  background-color: rgba(252, 252, 255, 1);
 }
 .carousel-img-div {
   height: 100%;
